# aoc_2022

./: .gitignore  Cargo.toml  README.md  bench.sh  move.sh
.github/workflows/: main.yml
benches/: my_benchmark.rs  quick_bench.rs  solutions.rs
src/: input.rs  lib.rs  main.rs
src/solutions/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs  mod.rs  solution.rs
src/solutions/d12/: directions.rs  mod.rs  traverse.rs  util.rs
src/solutions/d5/: crate_stack.rs  instruction.rs  mod.rs
src/solutions/d6/: mod.rs
src/solutions/d7/: mod.rs
