[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "aoc_2022"

[dependencies]
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "solutions"
harness = false

[[bench]]
name = "quick_bench"
harness = false
