[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "aoc_2022"

[dependencies]
arrayvec = "0.7.2"
joinery = "3.1.0"
lazy_format = "2.0.0"
nom = "7.1.1"
once_cell = "1.16.0"
rustc-hash = "1.1.0"
smallvec = "1.10.0"

[dev-dependencies]
criterion = { version = '0.4', features=['real_blackbox'] }
iai = "0.1.1"
lazy_static = "1.4.0"

[[bench]]
name = "solutions"
harness = false

[[bench]]
name = "quick_bench"
harness = false


[profile.bench]
lto = true
panic = "abort"

[profile.release]
lto = true
panic = "abort"
